--- a/src/app/pages/cliente/cliente-edicion/cliente-edicion.component.html
+++ b/src/app/pages/cliente/cliente-edicion/cliente-edicion.component.html
@@ -20,8 +20,8 @@
     </mat-form-field>
 
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="NUMDOC" required formControlName="numdoc" type="string">
-        <small *ngIf="f.numdoc.errors?.required && f.numdoc.touched" class="invalido">NUMDOC es requerido</small>
+        <input matInput placeholder="NumDoc" required formControlName="numdoc" type="string">
+        <small *ngIf="f.numdoc.errors?.required && f.numdoc.touched" class="invalido">NumDoc es requerido</small>
     </mat-form-field>
 
     <mat-form-field class="example-full-width">
