--- a/src/app/pages/cliente/cliente.component.html
+++ b/src/app/pages/cliente/cliente.component.html
@@ -15,7 +15,7 @@
     </ng-container>
 
     <ng-container matColumnDef="numdoc">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> NUMDOC </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header> NumDoc </mat-header-cell>
         <mat-cell *matCellDef="let row"> {{row.numdoc}}</mat-cell>
     </ng-container>
 
